--- a/search/search.html
+++ b/search/search.html
@@ -16,7 +16,7 @@
 			<p>Tugas Besar Pemrograman Web || Kelompok 3</p>
 		</div>
 		<div class="pages">
-			<a href="/index.html">Sorting</a>
+			<a href="../index.html">Sorting</a>
 			<a href="search.html">Searching</a>
 		</div>
 	</div>
