--- a/search/search.html
+++ b/search/search.html
@@ -16,22 +16,18 @@
 			<p>Tugas Besar Pemrograman Web || Kelompok 3</p>
 		</div>
 		<div class="pages">
-			<a href="/index.html">Sorting</a>
+			<a href="../index.html">Sorting</a>
 			<a href="search.html">Searching</a>
 		</div>
 	</div>
 
 	<div class="content">
-		<div class="menu">
-			<button id="new_arr">Array Baru</button>
-			<div class="size">
-				<p>Ukuran :</p>
-				<input type="range" id="arr_size" min="5" max="100" step="1" value="60">
-			</div>
-			<div class="speed">
-				<p>Kecepatan :</p>
-				<input type="range" id="sort_speed" min="20" max="300" step="10" value="60">
-			</div>
+
+		<div class="sort_options">
+			<button class="linearSearch">Linear Search</button>
+			<button class="linearSearch">Binary Search</button>
+			<button class="linearSearch">Sentinel Linear Search</button>
+			<button class="linearSearch">Ternary Search</button>
 		</div>
 
 		<div class="sort_visual">
@@ -48,12 +44,19 @@
 			</div>
 		</div>
 
-		<div class="sort_options">
-			<button class="linearSearch">Linear Search</button>
-			<button class="linearSearch">Binary Search</button>
-			<button class="linearSearch">Sentinel Linear Search</button>
-			<button class="linearSearch">Ternary Search</button>
+		<div class="menu">
+			<button id="new_arr">Array Baru</button>
+			<div class="size">
+				<p>Ukuran :</p>
+				<input type="range" id="arr_size" min="5" max="100" step="1" value="60">
+			</div>
+			<div class="speed">
+				<p>Kecepatan :</p>
+				<input type="range" id="sort_speed" min="20" max="300" step="10" value="60">
+			</div>
 		</div>
+
+		
 	</div>
 
 	<script src="script_search.js"></script>
